@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-15T02:23:12Z",
+  "timestamp" : "2022-10-15T08:30:18Z",
   "count_outdated" : 182,
   "uniques_outdated" : 54,
-  "count" : 197,
-  "uniques" : 64,
+  "count" : 198,
+  "uniques" : 65,
   "clones" : [
     {
       "timestamp": "2022-10-01T00:00:00Z",
@@ -70,6 +70,13 @@
     },
     {
       "timestamp": "2022-10-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
