@@ -1,5 +1,5 @@
 {
-  "count": 15,
+  "count": 16,
   "uniques": 2,
   "clones": [
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2022-10-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
